--- a/challenge.html
+++ b/challenge.html
@@ -50,21 +50,73 @@
         </div>
       </nav>
     </header>
-    <div class="container nav-padding content">
-      <h1>デモ・ポスター発表</h1>
-      <ul></ul>
-      <div class="program">
-        <hr>
-        <div class="jumbotron">
-          <h3>未定</h3>
-          <ul class="list-inline">
-            <li class="list-inline-item"><b>日時：</b>未定</li>
-            <li class="list-inline-item"><b>座長：</b>未定</li>
-          </ul>
-        </div>
-        <hr>
-        <p> <small>著者の方へ：ウェブプログラム掲載用のデータの提出・差替を希望する場合はウェブ担当 2022web@wiss.orgへ連絡をお願いします。書誌情報（著者・タイトル等）にかかる変更を希望する場合はプログラム委員長 2022@wiss.org へ連絡をお願いします。</small></p>
-      </div>
+    <div class="container nav-padding content"><h1>WISS Challenge募集</h1>
+<h2>WISSの発表・聴講・議論・記録をサポートし盛り上げる新たなシステムを募集します</h2>
+<p>インタラクティブシステムとソフトウェアに関するワークショップ (WISS) では、会議の場自体もよりインタラクティブにしていく試みを行うことが伝統となっています。 1997年に導入されたチャットシステムやサブ会場へのリモコンカメラでの中継から始まり、2004年からは「WISS Challenge」として「新たな試み」を公募し「Lock-on-Chat」など好評を博すシステムが登場しています。</p>
+<p>WISS2022でもWISS Challengeを募集します。感染症対策下でのハイブリッド開催について、オンサイト/リモートどちら向けの支援チャレンジも募集します。感染状況が流動的で応募しにくい状況に対策するため、応募前の相談も受け付けます。ご気軽に打診ください。</p>
+<h2>募集要項</h2>
+<p>WISS2022でのWISS Challengeの募集につきまして、オンサイト/リモート開催を支援するシステムの募集を行います。
+現在以下のようなシステムをWISS Challengeのテーマ例として特に歓迎します。またそれ以外のテーマも歓迎します。</p>
+<ul>
+<li>オンラインとオンサイト参加者をつなぐシステム
+　- ハイブリッド開催により参加のオプションが広がる一方で、オンサイト参加者とオンライン参加者のコミュニケーションにはまだギャップが残っています。シームレスなコミュニケーションを促進できるようなアイデアを募集します。</li>
+<li>リモート発表・聴講・質疑を支援するシステム
+<ul>
+<li>オンラインでの学会開催が広く普及し、一面では従来よりも便利な点を見せていますが、これを支援してよりよい意見交換やコミュニティ育成につなげる技術はまだ確立していません。
+オンライン会議における発表・聴講・質疑の活性化および高度化に貢献するシステムの提案を歓迎します。VRを活用するものや、参加状況の可視化など、是非アイデアをお寄せください。</li>
+</ul>
+</li>
+<li>事前コミュニケーション支援のアイディア
+<ul>
+<li>WISSでは参加登録者全員をSlackに招待し、事前コミュニケーション環境を提供する予定です。この環境を利用して、Slackbotの利用など、「WISSが始まる前からWISSは始まっている」というような盛り上がりを作るアイディアを募集します。</li>
+</ul>
+</li>
+</ul>
+<h2>応募方法</h2>
+<p>以下の内容をページ最下部の問合せ先にご送付ください。（期限：11月25日（金））</p>
+<ul>
+<li>企画提案書(PDFファイル、書式は任意、A4サイズで1～2枚程度)
+<ul>
+<li>概要</li>
+<li>ユーザが使うにあたって必要な機材・環境</li>
+</ul>
+</li>
+<li>代表者名</li>
+<li>連絡先メールアドレス</li>
+</ul>
+<h2>相談の受付</h2>
+<p>正式に応募する前に、学会の開催状況、現地やオンラインの準備状況など応募に必要な情報を知りたい方や、「こんなアイデアはどうだろう」と応募を検討している方は、ページ最下部の問合せ先まで、ご気軽にご相談ください。</p>
+<h2>制約等</h2>
+<ul>
+<li>学会の運営に支障を来さないようにしてください。</li>
+<li>他のシステムや参加者を妨害しない/大きな迷惑にならないようにしてください。</li>
+<li>なるべく多くの参加者が (同時に) 利用できることが望ましいです。 (WISS の参加者は150～200名程度です)</li>
+<li>個人情報および知的財産権の取り扱いにご注意ください。
+<ul>
+<li>WISS参加者には申込時に「WISS会期中に利用する WISS Challenge 関連システムの利用記録について、個人が特定されない形での研究利用を許可します」という項目への同意を求めますので、これを前提にしていただいて構いません。</li>
+</ul>
+</li>
+<li>学会側で用意する中継以外の音声・映像の中継はプライバシ管理が極めて難しいので禁止します。</li>
+<li>専用のハードが必要で少人数にしか対応できない場合や、多人数での運用に不安がある場合などはご相談下さい。</li>
+</ul>
+<h2>環境</h2>
+<ul>
+<li>サーバ等でオンライン会議の開催に追加で必要となる機材は基本的に提案者側で用意していただきます。</li>
+<li>参加者のネットワーク帯域にご留意ください。</li>
+<li>オンライン会議システムに何らかの連携を希望する場合にはご相談ください。</li>
+</ul>
+<h2>応募後の流れ</h2>
+<ul>
+<li>応募された企画は締め切りを待たず順次プログラム委員会にて審査し、採否をお知らせします。遅くとも11月末までに採否を決定します。</li>
+<li>採択された企画は、応募者に実装及び WISS 2022 にて設営・運営をしていただきます。</li>
+<li>学会の運営や会場の都合、他の企画との調整などのために仕様の変更をお願いすることがあります。そのため、実装・設営・運営は必要に応じて随時プログラム委員会との議論の上で進めて頂きます。</li>
+<li>WISS 開会時に使用方法などの説明のために3分程度のプレゼンテーションを行って頂く予定です。</li>
+<li>利用公知には参加者向けSlackをご活用ください。</li>
+</ul>
+<h2>応募先・問い合わせ先</h2>
+<p>WISS Challenge 2022 担当</p>
+<p>入江 英嗣（東大） 2022challenge at wiss.org</p>
+
     </div>
     <footer>
       <div class="container">
