--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       <div class="alert alert-primary"> 
         <p style="margin-bottom: 0px;">最近の主な更新内容：</p>
         <ul style="margin: 0px;">
+          <li>2022/10/10: <a href="./challenge.html">WISS Challenge募集ページ</a>を掲載しました</li>
+          <li>2022/07/29: <a href="./design-competition.html">表紙デザイン募集ページ</a>を掲載しました</li>
           <li>2022/07/29: Webサイト公開</li>
         </ul>
       </div><hr>
