add participants and volunteer page

--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -26,7 +26,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-for-participants">参加募集</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-for-participants"><a class="dropdown-item" href="./">参加募集(準備中)</a><a class="dropdown-item" href="./design-competition.html">表紙デザイン募集</a><a class="dropdown-item" href="./challenge.html">WISS Challenge募集</a><a class="dropdown-item" href="./">学生ボランティア募集(準備中)</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-for-participants"><a class="dropdown-item" href="./call-for-participants.html">参加募集</a><a class="dropdown-item" href="./design-competition.html">表紙デザイン募集</a><a class="dropdown-item" href="./challenge.html">WISS Challenge募集</a><a class="dropdown-item" href="./call-for-studentvolunteer.html">学生ボランティア募集</a>
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-program">プログラム</a>
@@ -65,7 +65,7 @@
 <li>プロジェクションマッピング・高度電飾システム，など</li>
 </ul>
 <p>論文は， <strong>登壇発表（査読あり）</strong> と， <strong>デモ・ポスター発表（原則査読なし）</strong> の2つのカテゴリで募集します．優秀な登壇発表，デモ・ポスターについては表彰します．</p>
-<p>本年は，<strong>現地開催とオンライン開催のハイブリッド開催</strong>となります．ただし， <strong>新型コロナウイルスの状況等によっては，開催直前になって完全オンライン開催へと移行する可能性があります．</strong> なお，現地参加を希望する方には，「<strong>新型コロナウイルス感染症の必要回数(3回)のワクチン接種</strong>」を求めることになりました．現地参加を予定されている方は，ワクチン接種に関する情報を収集し，WISS2022参加の2週間前までに必要回数(3回)の接種を終えるようにしてください．<strong>参加条件の詳細については現在検討中ですので，後日お知らせします．</strong></p>
+<p>本年は，<strong>現地開催とオンライン開催のハイブリッド開催</strong>となります．ただし， <strong>新型コロナウイルスの状況等によっては，開催直前になって完全オンライン開催へと移行する可能性があります．</strong> なお，現地参加を希望する方には，「<strong>新型コロナウイルス感染症の必要回数(3回)のワクチン接種</strong>」を求めることになりました．現地参加を予定されている方は，ワクチン接種に関する情報を収集し，WISS2022参加の2週間前までに必要回数(3回)の接種を終えるようにしてください．<s><strong>参加条件の詳細については現在検討中ですので，後日お知らせします．</strong></s></p>
 <p>WISS2022では，予稿集はウェブのみでの公開となります．LaTeXおよびWORDで書式を提供し，PDFで原稿を公開します．</p>
 <p>論文の性格からまとめますと， <strong>登壇発表（査読あり）はArchival，デモ・ポスター発表はNon-archivalであり，プログラム上で明確に区別されます</strong> ．</p>
 <h2>その他の募集</h2>
@@ -125,13 +125,13 @@
 <li>デモ・ポスター発表は，原則査読はありませんが，枠が限られているため，応募件数によっては早期に締め切る可能性があります．また，学会発表である以上，単に思いつきだけでなく，議論に値するだけの材料・根拠をそろえた上で投稿してください．内容が不適切だとプログラム委員会が判断した場合は，不採択となる可能性があります．既発表論文についての扱いは論文の査読方針に準じます．</li>
 <li>論文本体とは別に，「この研究はどういう未来を切り拓くのか」について，著者の視点からアピールしたい点があれば，「未来ビジョン」とした節を設けて自由に議論してください．</li>
 <li>展示に関する制約の詳細（利用いただける面積，ポスターの横幅制限，電力等）は後日調整となります．詳細はデモ・ポスターチェアにお問い合わせください．</li>
-<li><strong>デモ・ポスター発表の発表形態については現在検討中ですので，後日お知らせします．</strong></li>
+<li>デモ・ポスター発表は現地開催とする予定です．デモ・ポスター発表者は著者のうち少なくとも</li>
 </ul>
 <h3>論文なしデモ</h3>
 <ul>
 <li>発表枠に余裕がある場合，「論文のWEB掲載を行わない」デモ・ポスター発表も受け付けます．出来立てのホットなデモはもちろんですが，研究を始めたばかりで実装が十分でない場合でも，研究計画について十分に説明できるようであれば，ポスターとして発表すれば，来場者から有用なアドバイスを受けることができるでしょう．発表者が学生の場合には，発表者割引の適用対象となります．発表枠が一杯になった場合には申込期限前に募集を打ち切る可能性があります．また，「論文WEB掲載あり」の発表を優先してレイアウトを割り当ててから残った空きスペースを割り当てますので，デモに最適な環境が十分に確保できない可能性がありますのでご了承ください．</li>
 <li>希望する場合には，発表の題目・著者名・概要・展示内容の簡単な説明（デモかポスターか．デモなら机の上で済むか，もっと大がかりか）をつけて投稿システムから申し込みしてください．その後，担当者から発表者専用登録サイトのURLを通知するので，参加登録を行ってください．</li>
-<li><strong>デモ・ポスター発表の発表形態については現在検討中ですので，後日お知らせします．</strong></li>
+<li><strong>デモ・ポスター発表は現地開催とする予定です．デモ・ポスター発表者は著者のうち少なくとも1名以上が現地参加し現地で発表する，あるいは代理の発表者を立てて現地で発表を行っていただきます．</strong> (2022年11月08日追記)</li>
 </ul>
 <h2>スケジュール</h2>
 <table>
@@ -249,10 +249,10 @@
           <div class="col-4 col-sm">
             <h2>参加募集</h2>
             <ul class="list-unstyled">
-              <li><a href="./">参加募集(準備中)</a></li>
+              <li><a href="./call-for-participants.html">参加募集</a></li>
               <li><a href="./design-competition.html">表紙デザイン募集</a></li>
               <li><a href="./challenge.html">WISS Challenge募集</a></li>
-              <li><a href="./">学生ボランティア募集(準備中)</a></li>
+              <li><a href="./call-for-studentvolunteer.html">学生ボランティア募集</a></li>
             </ul>
           </div>
           <div class="col-4 col-sm">
