--- a/call-for-studentvolunteer.html
+++ b/call-for-studentvolunteer.html
@@ -50,45 +50,87 @@
         </div>
       </nav>
     </header>
-    <div class="jumbotron" id="top">
-      <div class="container text-center"><img src="./assets/textures/texture.jpg" style="object-fit: cover; object-position: 50% 50%; width: 100%; height: 100%; mix-blend-mode: overlay; position: absolute; top: 0%; left: 0%; opacity: 20%; pointer-events: none; z-index: 2;"><img class="img-fluid" src="./assets/logo/logo.png" style="max-height: 260px;">
-        <hr>
-        <p class="lead">WISS 2022: 第30回インタラクティブシステムとソフトウェアに関するワークショップ</p>
-      </div>
-    </div>
-    <div class="container content">
-      <div class="alert alert-primary"> 
-        <p style="margin-bottom: 0px;">最近の主な更新内容：</p>
-        <ul style="margin: 0px;">
-          <li>2022/11/10: <a href="./call-for-participants.html">参加募集ページ</a>を掲載しました</li>
-          <li>2022/11/10: <a href="./call-for-studentstaff.html">学生ボランティア募集ページ</a>を掲載しました</li>
-          <li>2022/10/10: <a href="./challenge.html">WISS Challenge募集ページ</a>を掲載しました</li>
-          <li>2022/07/29: <a href="./design-competition.html">表紙デザイン募集ページ</a>を掲載しました</li>
-          <li>2022/07/29: Webサイト公開</li>
-        </ul>
-      </div><hr>
+    <div class="container nav-padding content"><h1>学生ボランティア募集</h1>
+<p>WISSではWISS2022の運営をお手伝いいただく学生ボランティアを募集いたします。 WISSに楽しく参加し、発表を聴講しながらご参加いただけます。当日発表（登壇発表/デモポスター発表）がある学生の方もご参加可能です。用務の配分に際しては発表への妨げがないように配慮いたします。</p>
+<h2>主な仕事内容（現地会場）</h2>
+<p>前日入りしての会場設営作業、クロージング後の撤収作業、会期中の運営補佐の3つが主な仕事です。具体的な各仕事内容は以下のようになる予定です。</p>
+<h3>設営・撤収作業（現地）</h3>
 <ul>
-<li>主催：日本ソフトウェア科学会 インタラクティブシステムとソフトウェア研究会</li>
-<li>日時：2022年12月14日(水)～16日(金)</li>
-<li>場所：<a href="https://www.daiwaresort.jp/zaou/index.html">アクティブリゾーツ宮城蔵王</a>（宮城県）</li>
-<li>スケジュール：登壇発表論文投稿締め切り 2022年09月26日(月)</li>
-</ul>
-<hr>
-<p>WISSは，インタラクティブシステムにおける未来を切り拓くような新しいアイデア・技術を議論するワークショップです．この分野において国内でもっともアクティブな学術会議のひとつであり，例年150名程度の参加者が朝から深夜まで活発で意義深い情報交換を行っています．さまざまなバックグラウンドをもった方々からの積極的な論文投稿及び参加をお待ちしています．</p>
-<p>本年は，<strong>現地開催とオンライン開催のハイブリッド開催</strong>となります．ただし， <strong>新型コロナウイルスの状況等によっては，開催直前になって完全オンライン開催へと移行する可能性があります．</strong> なお，現地参加を希望する方には，「<strong>新型コロナウイルス感染症の必要回数(3回)のワクチン接種</strong>」を求めることになりました．現地参加を予定されている方は，ワクチン接種に関する情報を収集し，WISS2022参加の2週間前までに必要回数(3回)の接種を終えるようにしてください．<s><strong>参加条件の詳細については現在検討中ですので，後日お知らせします．</strong></s></p>
-<p>WISS2022 PC委員長 志築 文太郎<br />
-WISS2022 実行委員会<br />
-会議開催形態に関する問合せ・提案用メールアドレス: <a href="mailto:2022@wiss.org">2022@wiss.org</a></p>
-<h2>協賛学会（五十音順）</h2>
+<li><strong>前日（12/13）の設営作業（4時間程度）:</strong>
 <ul>
-<li><a href="./">Comming Soon</a></li>
+<li>運営委員と共に前日午後から会場入りし、ネットワーク配線、配布物の用意、機器の配置等の会場設営作業をお手伝いします。</li>
+<li>Web上での登壇発表の発表者情報、抄録、コメント入力のためのページの作成・管理補佐です。ScrapBoxの使用を予定しています。</li>
+<li>※）前日入りした際の宿泊費・食費はWISS側で負担いたします。</li>
 </ul>
+</li>
+<li><strong>当日（12/14）の設営作業・最終日（12/16）の撤収作業（それぞれ約2時間程度）:</strong>
+<ul>
+<li>初日朝の最終確認と最終日クロージング後の撤収作業です。</li>
+<li>※）最終日の昼食費用はWISS側が負担いたします。</li>
+</ul>
+</li>
+</ul>
+<h3>会期中の運営補佐（現地）</h3>
+<ul>
+<li><strong>受付準備・受付（初日〜二日目午前中）:</strong>
+<ul>
+<li>参加受付や過去プロシーディングスの販売等の受付業務の補佐です。なお、セッションの合間の休憩時間中のみの作業です。</li>
+</ul>
+</li>
+<li><strong>セッション補佐（各セッションごと）:</strong>
+<ul>
+<li>登壇発表の際の会場照明の切り替えやマイクの管理、タイムキーパー等です。発表を聴きながらの作業が可能です。</li>
+</ul>
+</li>
+<li><strong>デモプレビューの補佐（デモ発表前）:</strong>
+<ul>
+<li>デモプレビューの際のタイムキーパー、順番管理等です。</li>
+</ul>
+</li>
+<li><strong>夕食・昼食準備補佐（食事前）:</strong>
+<ul>
+<li>人の誘導やお弁当の配布等です。</li>
+</ul>
+</li>
+<li><strong>デモ・ポスター準備補佐（デモ・ポスター発表前）:</strong>
+<ul>
+<li>毎日行われるデモ・ポスター発表の会場補佐です。</li>
+</ul>
+</li>
+<li><strong>ナイトセッションの補佐:</strong></li>
+<li>19:30~24:00まで行われるナイトセッションの会場整備や掃除等。常時ではなく、1時間に1回など適宜作業をしてもらいます。ナイトセッションに参加しながらの作業が可能です。深夜作業のため、アルバイト代が発生します。（深夜作業のため，18歳未満の方は担当できません。）</li>
+</ul>
+<h2>仕事の割り振りについて</h2>
+<p>上記の仕事は各人の負荷が分散するよう考慮しつつ割り振らせていただきます。また、当日発表がある方には発表に影響がないよう仕事の割り振りを行います。なお、応募人数等によっては会場設営・撤収作業のみの参加や、当日の運営作業のみの参加も検討いたします。希望があれば応募前や応募時にお知らせ下さい。</p>
+<h2>すべてのセッションが聴講可能</h2>
+<p>全ての学生ボランティアさんが全ての登壇発表及びデモポスター発表を100%聴講できることを目標に仕事を割り振ります。ただし、初日や二日目の午前の一部の時間は受付業務等をお手伝いいただく場合もあります。 またデモ・ポスターセッション中の業務については、ローテーションを組む事で拘束時間を最大限短縮します。</p>
+<h2>参加費</h2>
+<ul>
+<li>学生ボランティアの現地参加費は発表の有無に関わらず、宿泊費20,000円＋参加費7,000円の合計27,000円となります。
+<ul>
+<li>※）ただし、旅費の手当はありません。</li>
+</ul>
+</li>
+<li>業務時間：6時間程度/日（適宜作業をお願いすることになりますが、総計が6時間を超えないように調整いたします）</li>
+<li>以下の仕事を担当する場合、アルバイト代が出ます。
+ナイトセッション担当: 日給9,250円（4.5時間勤務予定）
+中継担当: 日給9,250円（4時間勤務予定）</li>
+</ul>
+<h2>学生ボランティア参加のメリット</h2>
+<ul>
+<li>学生ボランティアとして参加していただいたことを証明する「ボランティア証明書」を発行します。履歴書や奨学金書類の記述にお役立てください。</li>
+<li>前日からの作業を通し、学生ボランティア同士での交流が多くなります。近い分野の学生と交流する機会としてお役立てください。</li>
+</ul>
+<h2>応募方法</h2>
+<p>応募を希望される方は <strong>指導教員からの許可</strong> を得た上で、下記のフォームから応募ください。</p>
+<p><a href="https://forms.gle/E6JuF1jUVg5sfhJQ8">学生ボランティア応募フォーム</a></p>
+<h2>応募締め切り</h2>
+<p>応募フォームは11月17日に締め切ります。それ以前でも、応募者数が定員（15名を予定）に達し次第締め切ります。</p>
+<h2>選考方法</h2>
+<p>前日入り（現地参加）、最終日撤収作業が可能な方を優先し、先着順に決定されます。採否が確定した場合はメールにてご連絡いたします。</p>
+<h1>問い合わせ</h1>
+<p>質問は学生ボランティア担当　（2022studentstaff [at] wiss.org）までご連絡ください．</p>
 
-      <h2>企業スポンサー（五十音順）</h2>
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://www.wiss.org/WISS2022/"><img class="img-fluid" src="./assets/sponsors/template_sponser.png" alt="Name">
-            <p>Name</p></a></div>
-      </div>
     </div>
     <footer>
       <div class="container">
