update index page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p style="margin-bottom: 0px;">最近の主な更新内容：</p>
         <ul style="margin: 0px;">
           <li>2022/11/10: <a href="./call-for-participants.html">参加募集ページ</a>を掲載しました</li>
-          <li>2022/11/10: <a href="./call-for-studentstaff.html">学生ボランティア募集ページ</a>を掲載しました</li>
+          <li>2022/11/10: <a href="./call-for-studentvolunteer.html">学生ボランティア募集ページ</a>を掲載しました</li>
           <li>2022/10/10: <a href="./challenge.html">WISS Challenge募集ページ</a>を掲載しました</li>
           <li>2022/07/29: <a href="./design-competition.html">表紙デザイン募集ページ</a>を掲載しました</li>
           <li>2022/07/29: Webサイト公開</li>
