update index page

--- a/index.html
+++ b/index.html
@@ -81,8 +81,20 @@ WISS2022 実行委員会<br />
 会議開催形態に関する問合せ・提案用メールアドレス: <a href="mailto:2022@wiss.org">2022@wiss.org</a></p>
 <h2>協賛学会（五十音順）</h2>
 <ul>
-<li><a href="./">Comming Soon</a></li>
+<li><a href="https://www.iieej.org/sigvc/">画像電子学会ビジュアルコンピューティング研究会</a></li>
+<li><a href="https://art-science.org/">芸術科学会</a></li>
+<li><a href="https://sice-si.org/ja/">計測自動制御学会システムインテグレーション部門</a></li>
+<li><a href="http://entcomp.org/sig/">情報処理学会エンタテインメントコンピューティング研究会</a></li>
+<li><a href="http://www.sigmus.jp/">情報処理学会音楽情報科学研究会</a></li>
+<li><a href="http://www.sig-slp.jp/">情報処理学会音声言語情報処理研究会</a></li>
+<li><a href="http://cgvi.jp/">情報処理学会コンピュータグラフィックスとビジュアル情報学研究会</a></li>
+<li><a href="http://www.ipsj.or.jp/sig/dcc/">情報処理学会デジタルコンテンツクリエーション研究会</a></li>
+<li><a href="http://www.sighci.jp/">情報処理学会ヒューマンコンピュータインタラクション研究会</a></li>
+<li><a href="https://sigpro.ipsj.or.jp/">情報処理学会ユビキタスコンピューティングシステム研究会</a></li>
+<li><a href="http://sigubi.ipsj.or.jp/">電子情報通信学会ヒューマンコミュニケーショングループ</a></li>
+<li><a href="https://vrsj.org/">日本バーチャルリアリティ学会</a></li>
 </ul>
+<p>ほかにも継続依頼中</p>
 
       <h2>企業スポンサー（五十音順）</h2>
       <div class="row">
