update index page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 WISS2022 実行委員会<br />
 会議開催形態に関する問合せ・提案用メールアドレス: <a href="mailto:2022@wiss.org">2022@wiss.org</a></p>
 <h2>協賛学会（五十音順）</h2>
-<p>ほかにも継続依頼中</p>
+<p>他にも継続依頼中</p>
 <ul>
 <li><a href="https://www.iieej.org/sigvc/">画像電子学会ビジュアルコンピューティング研究会</a></li>
 <li><a href="https://art-science.org/">芸術科学会</a></li>
