--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-for-participants">参加募集</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-for-participants"><a class="dropdown-item" href="./call-for-participants.html">参加募集</a><a class="dropdown-item" href="./design-competition.html">表紙デザイン募集</a><a class="dropdown-item" href="./challenge.html">WISS Challenge募集</a><a class="dropdown-item" href="./call-for-studentvolunteer.html">学生ボランティア募集</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-for-participants"><a class="dropdown-item" href="./call-for-participants.html">参加募集</a><a class="dropdown-item" href="./covid19d.html">参加形態と新型コロナ対策について</a><a class="dropdown-item" href="./design-competition.html">表紙デザイン募集</a><a class="dropdown-item" href="./challenge.html">WISS Challenge募集</a><a class="dropdown-item" href="./call-for-studentvolunteer.html">学生ボランティア募集</a>
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-program">プログラム</a>
@@ -60,6 +60,7 @@
       <div class="alert alert-primary"> 
         <p style="margin-bottom: 0px;">最近の主な更新内容：</p>
         <ul style="margin: 0px;">
+          <li>2022/11/11: <a href="./covid19d.html">参加形態と新型コロナ対策に関するページ</a>を掲載しました</li>
           <li>2022/11/10: <a href="./call-for-participants.html">参加募集ページ</a>を掲載しました</li>
           <li>2022/11/10: <a href="./call-for-studentvolunteer.html">学生ボランティア募集ページ</a>を掲載しました</li>
           <li>2022/10/10: <a href="./challenge.html">WISS Challenge募集ページ</a>を掲載しました</li>
@@ -117,6 +118,7 @@ WISS2022 実行委員会<br />
             <h2>参加募集</h2>
             <ul class="list-unstyled">
               <li><a href="./call-for-participants.html">参加募集</a></li>
+              <li><a href="./covid19d.html">参加形態と新型コロナ対策について</a></li>
               <li><a href="./design-competition.html">表紙デザイン募集</a></li>
               <li><a href="./challenge.html">WISS Challenge募集</a></li>
               <li><a href="./call-for-studentvolunteer.html">学生ボランティア募集</a></li>
