--- a/call-for-studentvolunteer.html
+++ b/call-for-studentvolunteer.html
@@ -51,6 +51,7 @@
       </nav>
     </header>
     <div class="container nav-padding content"><h1>学生ボランティア募集</h1>
+<p><span style="color: red; "><strong>応募が定員に達しましたので、募集を締め切らせていただきました。</strong></span> (2022年11月11日追記)</p>
 <p>WISSではWISS2022の運営をお手伝いいただく学生ボランティアを募集いたします。 WISSに楽しく参加し、発表を聴講しながらご参加いただけます。当日発表（登壇発表/デモポスター発表）がある学生の方もご参加可能です。用務の配分に際しては発表への妨げがないように配慮いたします。</p>
 <h2>主な仕事内容（現地会場）</h2>
 <p>前日入りしての会場設営作業、クロージング後の撤収作業、会期中の運営補佐の3つが主な仕事です。具体的な各仕事内容は以下のようになる予定です。</p>
@@ -122,6 +123,7 @@
 <li>前日からの作業を通し、学生ボランティア同士での交流が多くなります。近い分野の学生と交流する機会としてお役立てください。</li>
 </ul>
 <h2>応募方法</h2>
+<p><span style="color: red; "><strong>応募が定員に達しましたので、募集を締め切らせていただきました。</strong></span> (2022年11月11日追記)</p>
 <p>応募を希望される方は <strong>指導教員からの許可</strong> を得た上で、下記のフォームから応募ください。</p>
 <p><a href="https://forms.gle/E6JuF1jUVg5sfhJQ8">学生ボランティア応募フォーム</a></p>
 <h2>応募締め切り</h2>
