--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <div class="alert alert-primary"> 
         <p style="margin-bottom: 0px;">最近の主な更新内容：</p>
         <ul style="margin: 0px;">
+          <li>2022/11/11: 応募が定員に達したため，学生ボランティア募集を締め切りました</li>
           <li>2022/11/11: <a href="./covid19d.html">参加形態と新型コロナ対策に関するページ</a>を掲載しました</li>
           <li>2022/11/10: <a href="./call-for-participants.html">参加募集ページ</a>を掲載しました</li>
           <li>2022/11/10: <a href="./call-for-studentvolunteer.html">学生ボランティア募集ページ</a>を掲載しました</li>
