update index page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
 WISS2022 実行委員会<br />
 会議開催形態に関する問合せ・提案用メールアドレス: <a href="mailto:2022@wiss.org">2022@wiss.org</a></p>
 <h2>協賛学会（五十音順）</h2>
-<p>他にも継続依頼中</p>
 <ul>
 <li><a href="https://www.iieej.org/sigvc/">画像電子学会ビジュアルコンピューティング研究会</a></li>
 <li><a href="https://art-science.org/">芸術科学会</a></li>
@@ -93,9 +92,11 @@ WISS2022 実行委員会<br />
 <li><a href="http://cgvi.jp/">情報処理学会コンピュータグラフィックスとビジュアル情報学研究会</a></li>
 <li><a href="http://www.ipsj.or.jp/sig/dcc/">情報処理学会デジタルコンテンツクリエーション研究会</a></li>
 <li><a href="http://www.sighci.jp/">情報処理学会ヒューマンコンピュータインタラクション研究会</a></li>
+<li><a href="https://sigpro.ipsj.or.jp/">情報処理学会プログラミング研究会</a></li>
 <li><a href="https://sigpro.ipsj.or.jp/">情報処理学会ユビキタスコンピューティングシステム研究会</a></li>
 <li><a href="http://sigubi.ipsj.or.jp/">電子情報通信学会ヒューマンコミュニケーショングループ</a></li>
 <li><a href="https://vrsj.org/">日本バーチャルリアリティ学会</a></li>
+<li><a href="https://jp.his.gr.jp/">ヒューマンインタフェース学会</a></li>
 </ul>
 
       <h2>企業スポンサー（五十音順）</h2>
