update cfp page

--- a/call-for-papers.html
+++ b/call-for-papers.html
@@ -51,6 +51,10 @@
       </nav>
     </header>
     <div class="container nav-padding content"><h1>WISS 2022論文募集</h1>
+<p><span style="color: red; "><strong>予稿有りデモ発表の申し込みが殺到し一度募集を締め切っておりましたが，
+会場と相談の上スペースを確保できましたので，以下の日程（変更もあり得ます）で追加募集を行います．
+件数に限りがありますので，お早めにお申し込みください．
+11月22日 17:00～11月24日 17:00。</strong></span> (2022年11月22日追記)</p>
 <p>未来を切り拓くような新しいインタラクティブなシステム，ソフトウェアに関する研究成果についての発表を募集します．具体的には，以下に示すような人間と計算機との様々なインタラクティブシステム，ソフトウェアの構成原理／構成法，ソフトウェア技術などに関する論文を対象とします．</p>
 <ul>
 <li>対話・情報共有システム</li>
@@ -115,6 +119,10 @@
 <h3>推薦論文について</h3>
 <p>採択された論文の中から，雑誌論文としてふさわしいと判断されるものを，ソフトウェア科学会会誌「コンピュータソフトウェア」へ推薦論文として推薦します．投稿時期・出版時期については現在検討中です．</p>
 <h2>デモンストレーション・ポスター発表</h2>
+<p><span style="color: red; "><strong>予稿有りデモ発表の申し込みが殺到し一度募集を締め切っておりましたが，
+会場と相談の上スペースを確保できましたので，以下の日程（変更もあり得ます）で追加募集を行います．
+件数に限りがありますので，お早めにお申し込みください．
+11月22日 17:00～11月24日 17:00。</strong></span> (2022年11月22日追記)</p>
 <ul>
 <li>割り当てられたスペースでデモまたはポスターによる発表をしていただきます．</li>
 <li>2ページ以内の論文（日本語あるいは英語）をPDFで提出してください．</li>
