--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@ WISS2022 実行委員会<br />
 
       <h2>企業スポンサー（五十音順）</h2>
       <div class="row">
-        <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://www.wiss.org/WISS2022/"><img class="img-fluid" src="./assets/sponsors/template_sponser.png" alt="Name">
-            <p>Name</p></a></div>
+        <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://cyberagent.ai/ailab/"><img class="img-fluid" src="./assets/sponsors/caailab.png" alt="株式会社サイバーエージェント AI Lab">
+            <p>株式会社サイバーエージェント AI Lab</p></a></div>
+        <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://www.1101.com/n/s/boshu_sm"><img class="img-fluid" src="./assets/sponsors/hobonichi_sm.png" alt="ほぼ日 サイエンス・マジック部">
+            <p>ほぼ日 サイエンス・マジック部</p></a></div>
       </div>
     </div>
     <footer>
