update covid19 page

--- a/call-for-participants.html
+++ b/call-for-participants.html
@@ -67,7 +67,7 @@
 <p>現地の<a href="https://www.daiwaresort.jp/zaou/index.html">アクティブリゾーツ宮城蔵王</a>に2泊3日で宿泊し、WISS2022に参加する形態です（事前申込みが必要）。
 現地参加者は全ての発表や議論、懇親会に参加できます。
 デモ・ポスター発表は、現地のみで実施するため、デモ・ポスター発表を行う発表者のうち少なくとも1名は現地参加することが必要です。</p>
-<p>新型コロナ対策として、<strong>現地参加者はWISS2022参加の2週間前までに必要回数（3回）のワクチン接種</strong> を終えていただくなどをお願いすることになりました。詳細については <strong>参加登録前</strong> に「<a href="https://www.wiss.org/WISS2022/covid19d.html">新型コロナ対策について</a>」をご覧ください（ワクチン接種ができない方についても「<a href="https://www.wiss.org/WISS2022/covid19d.html">新型コロナ対策について</a>」をご覧ください）。また、現地参加可能数に150人の上限を設定しているため、希望者が上限を超えた場合には参加をお断りします。なお、完全オンライン開催に切り替わった場合には、自動的に有料オンライン参加に移行し、参加費を支払い済みであれば差額を返金します。</p>
+<p>新型コロナ対策として、<strong>現地参加者はWISS2022参加の2週間前までに必要回数（3回）のワクチン接種（初日（12月14日）から参加する場合は2022年11月29日を含みそれ以前に3回目を接種）</strong> を終えていただくなどをお願いすることになりました。詳細については <strong>参加登録前</strong> に「<a href="https://www.wiss.org/WISS2022/covid19d.html">新型コロナ対策について</a>」をご覧ください（ワクチン接種ができない方についても「<a href="https://www.wiss.org/WISS2022/covid19d.html">新型コロナ対策について</a>」をご覧ください）。また、現地参加可能数に150人の上限を設定しているため、希望者が上限を超えた場合には参加をお断りします。なお、完全オンライン開催に切り替わった場合には、自動的に有料オンライン参加に移行し、参加費を支払い済みであれば差額を返金します。</p>
 <p>また、全ての客室内で禁煙です。喫煙は喫煙所でお願いします。</p>
 <p>WISSでは、深夜までディスカッションの機会を提供します。そのため、現地参加の場合には会場外の宿泊先との往復という形での参加は「原則」認めていません。 したがって、WISS2022に現地参加する場合には（たとえ日帰りでも）参加費と宿泊費（二日分）の両方が必要です。ただし、昨今の事情を鑑み、特別な事情のある方は下記の問い合わせ先まで事前にご相談ください。</p>
 <h4>有料オンライン参加</h4>
