update participant page

--- a/call-for-participants.html
+++ b/call-for-participants.html
@@ -64,6 +64,7 @@
 また、デモ・ポスター発表は現地でのみで行います。どの形態で参加されるのかご検討の上、必要に応じて参加申込みを行ってください。例えば、デモ・ポスターの発表者のうち少なくとも1名は現地参加が必要、登壇発表者は現地参加あるいは有料オンライン参加が必要、発表を行わない聴講者はいずれでも可能です。
 ただし、新型コロナの状況等によっては、開催直前になって完全オンライン形式へと移行する可能性があります。</p>
 <h4>現地参加（有料）</h4>
+<p><span style="color: red; "><strong>Early Registrationで、１５０部屋に達しております。ホテルと交渉を行い、若干の和室の部屋を確保しました。Late Registrationの方は、和室になる可能性があります。追加分の部屋が埋まった段階で、現地参加の申し込みを締め切ります。</strong></span> (2022年11月28日追記)</p>
 <p>現地の<a href="https://www.daiwaresort.jp/zaou/index.html">アクティブリゾーツ宮城蔵王</a>に2泊3日で宿泊し、WISS2022に参加する形態です（事前申込みが必要）。
 現地参加者は全ての発表や議論、懇親会に参加できます。
 デモ・ポスター発表は、現地のみで実施するため、デモ・ポスター発表を行う発表者のうち少なくとも1名は現地参加することが必要です。</p>
