update program page

--- a/program.html
+++ b/program.html
@@ -265,17 +265,17 @@
             <li class="list-inline-item"><b>チャット座長：</b>未定</li>
           </ul>
         </div>
-        <h4>[04] 準備中 <span class="badge badge-short">ショート発表</span></h4>
+        <h4>[04] Crane：プロダクトの機能性・可折性・可製造性を考慮した折紙の計算設計プラットフォーム <span class="badge badge-short">ショート発表</span></h4>
         <p class="authors">須藤海(東大)，野間裕太(東大)，谷道鼓太朗(Nature Architects)，鳴海紘也(東大)，舘知宏(東大)</p>
         <div class="row">
-          <div class="col-md-4"><img class="img-fluid img-thumbnail representative" src="./assets/representatives/placeholder.jpg"></div>
+          <div class="col-md-4"><img class="img-fluid img-thumbnail representative" src="./assets/representatives/04.jpg"></div>
           <div class="col-md-4">
             <h5>要旨：</h5>
-            <p>準備中</p>
+            <p>本稿では，Rhinoceros/Grasshopper上に実装された折紙の設計プラットフォームCraneを提案する．ユーザは（a）2D/3Dの折りパターンを設計し，（b）その変形をシミュレートし，逆に（c）ユーザの制約から新たな形状を発見することができる．また（d）厚みのない理想的な折りパターンから，ユーザの製造方法に応じて適切なヒンジが付けられた厚みのある構造を出力できる．本稿の後半では机・ランプシェード・マスクという3つのデザイン事例によりシステムの使用例と有効性を示す．</p>
           </div>
           <div class="col-md-4">
             <h5>採録時コメント：</h5>
-            <p>準備中</p>
+            <p>折紙プロダクトの設計・造形を支援するツール（Grasshopperのライブラリ群）と，デザイン事例を紹介している．提案されているツールは大変興味深く，実装の完成度も高い点が高く評価された．一方，長大な内容を圧縮したためか，投稿時の原稿にはシステムの挙動等，不明瞭な記述も散見された．こうした点を踏まえて，採録条件付きのショート採録と判定した．</p>
           </div>
         </div>
         <h4>[05] FaceShow: 顔の部分表示による遠隔会議支援システム <span class="badge badge-short">ショート発表</span></h4>
