update program page

--- a/program.html
+++ b/program.html
@@ -354,14 +354,14 @@
         <h4>[10] ユーザ嗜好と栄養摂取基準に基づくレシピ推薦手法の開発 <span class="badge badge-short">ショート発表</span></h4>
         <p class="authors">尾関沙羅(東京農工大)，小寺正明( Preferred Networks)，石黒勝彦(Preferred Networks)，西村太一(京大)，樋口啓太(Preferred Networks)</p>
         <div class="row">
-          <div class="col-md-4"><img class="img-fluid img-thumbnail representative" src="./assets/representatives/placeholder.jpg"></div>
+          <div class="col-md-4"><img class="img-fluid img-thumbnail representative" src="./assets/representatives/10.jpg"></div>
           <div class="col-md-4">
             <h5>要旨：</h5>
-            <p>準備中</p>
+            <p>日々の献立作成において，栄養バランスの管理は健康維持のために重要であるが，個人の食に対する嗜好を考慮しつつ栄養バランスを両立することは簡単ではない．本研究では，ユーザの食材嗜好及び，1日の栄養バランスに基づいたレシピの推薦手法を提案する．本手法では，嗜好食材に基づく嗜好スコアと，食事摂取基準に基づく栄養ペナルティを設定する．それらを用いてレシピを推薦することで，ユーザに栄養バランスを考慮したレシピ選択を促す．</p>
           </div>
           <div class="col-md-4">
             <h5>採録時コメント：</h5>
-            <p>準備中</p>
+            <p>本研究では、栄養摂取基準に基づいたレシピを提案するアルゴリズムの提案やGUIの実装にとどまらず、シミュレーションによる定量評価、ユーザ評価による定性評価などが行われました。これはWISSの6ページのフォーマットを考えると非常に充実した内容であり、提出されたビデオでも提案システムの挙動がわかりやすく紹介されていました。このため、いくつかの微修正はありますが、WISSでの登壇発表にふさわしい論文として「ショート採録(採録条件あり)」としました。</p>
           </div>
         </div>
         <hr>
