--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@ WISS2022 実行委員会<br />
 
       <h2>企業スポンサー（五十音順）</h2>
       <div class="row">
+        <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://corp.helpfeel.com/"><img class="img-fluid" src="./assets/sponsors/helpfeel.png" alt="株式会社Helpfeel">
+            <p>株式会社Helpfeel</p></a></div>
         <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://cyberagent.ai/ailab/"><img class="img-fluid" src="./assets/sponsors/caailab.png" alt="株式会社サイバーエージェント AI Lab">
             <p>株式会社サイバーエージェント AI Lab</p></a></div>
         <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://www.team-lab.com/"><img class="img-fluid" src="./assets/sponsors/teamlab.png" alt="チームラボ株式会社">
