--- a/design-competition.html
+++ b/design-competition.html
@@ -34,7 +34,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-live-streaming">動画中継</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-live-streaming"><a class="dropdown-item" href="https://www.youtube.com/">1日目(準備中)</a><a class="dropdown-item" href="https://www.youtube.com/">2日目(準備中)</a><a class="dropdown-item" href="https://www.youtube.com/">3日目(準備中)</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-live-streaming"><a class="dropdown-item" href="https://www.youtube.com/watch?v=IVL7VrkkIWc">1日目</a><a class="dropdown-item" href="https://www.youtube.com/watch?v=vMjE3qgqcig">2日目</a><a class="dropdown-item" href="https://www.youtube.com/watch?v=oXFj3CqbG7M">3日目</a>
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-proceedings">予稿集</a>
@@ -139,9 +139,9 @@
           <div class="col-4 col-sm">
             <h2>動画中継</h2>
             <ul class="list-unstyled">
-              <li><a href="https://www.youtube.com/">1日目(準備中)</a></li>
-              <li><a href="https://www.youtube.com/">2日目(準備中)</a></li>
-              <li><a href="https://www.youtube.com/">3日目(準備中)</a></li>
+              <li><a href="https://www.youtube.com/watch?v=IVL7VrkkIWc">1日目</a></li>
+              <li><a href="https://www.youtube.com/watch?v=vMjE3qgqcig">2日目</a></li>
+              <li><a href="https://www.youtube.com/watch?v=oXFj3CqbG7M">3日目</a></li>
             </ul>
           </div>
           <div class="col-4 col-sm">
