update participant page

--- a/call-for-participants.html
+++ b/call-for-participants.html
@@ -292,6 +292,7 @@ WISS2022ではアンチハラスメントポリシーを設けています。必
 <ul>
 <li>村尾 和哉 (立命館大学)</li>
 <li>志築 文太郎 (筑波大学)</li>
+<li>池松 香 (ヤフー株式会社，東北大学)</li>
 </ul>
 <p>連絡方法：WISS 2022参加者Slackのダイレクトメッセージ機能などをご利用ください。</p>
 <h3>参加登録フォームへ</h3>
