add demo page and proceedings

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-program">プログラム</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-program"><a class="dropdown-item" href="./program.html">全体スケジュール・登壇発表・ロングティザー発表</a><a class="dropdown-item" href="./demo-poster.html">デモ・ポスター発表(準備中)</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-program"><a class="dropdown-item" href="./program.html">全体スケジュール・登壇発表・ロングティザー発表</a><a class="dropdown-item" href="./demo-poster.html">デモ・ポスター発表</a>
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-live-streaming">動画中継</a>
@@ -38,7 +38,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-proceedings">予稿集</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-proceedings"><a class="dropdown-item" href="https://www.wiss.org/">ウェブ予稿集(準備中)</a><a class="dropdown-item" href="./">電子予稿集(準備中)</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-proceedings"><a class="dropdown-item" href="https://www.wiss.org/WISS2022Proceedings/">ウェブ予稿集</a><a class="dropdown-item" href="./downloads/proceedings.pdf">電子予稿集</a>
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-about-wiss">WISSについて</a>
@@ -60,6 +60,8 @@
       <div class="alert alert-primary"> 
         <p style="margin-bottom: 0px;">最近の主な更新内容：</p>
         <ul style="margin: 0px;">
+          <li>2022/12/08: <a href="https://www.wiss.org/WISS2022Proceedings/">ウェブ予稿集</a>及び<a href="./downloads/proceedings.pdf">電子予稿集</a>を掲載しました</li>
+          <li>2022/12/08: <a href="./demo-poster.html">デモ・ポスターページ</a>を掲載しました</li>
           <li>2022/11/30: <a href="./program.html">プログラムページ</a>を掲載しました</li>
           <li>2022/11/30: 現地参加申込を締め切りました</li>
           <li>2022/11/27: <a href="./call-for-papers.html">予稿なしデモ発表</a>の追加募集を行います</li>
@@ -109,6 +111,8 @@ WISS2022 実行委員会<br />
             <p>株式会社Helpfeel</p></a></div>
         <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://cyberagent.ai/ailab/"><img class="img-fluid" src="./assets/sponsors/caailab.png" alt="株式会社サイバーエージェント AI Lab">
             <p>株式会社サイバーエージェント AI Lab</p></a></div>
+        <div class="col-lg-4 col-md-6 col-12 text-center"><a href="http://www.madlabo.com/mad/index.htm"><img class="img-fluid" src="./assets/sponsors/mad.png" alt="数理設計研究所">
+            <p>数理設計研究所</p></a></div>
         <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://www.team-lab.com/"><img class="img-fluid" src="./assets/sponsors/teamlab.png" alt="チームラボ株式会社">
             <p>チームラボ株式会社</p></a></div>
         <div class="col-lg-4 col-md-6 col-12 text-center"><a href="https://www.1101.com/n/s/boshu_sm"><img class="img-fluid" src="./assets/sponsors/hobonichi_sm.png" alt="ほぼ日 サイエンス・マジック部">
@@ -142,7 +146,7 @@ WISS2022 実行委員会<br />
             <h2>プログラム</h2>
             <ul class="list-unstyled">
               <li><a href="./program.html">全体スケジュール・登壇発表・ロングティザー発表</a></li>
-              <li><a href="./demo-poster.html">デモ・ポスター発表(準備中)</a></li>
+              <li><a href="./demo-poster.html">デモ・ポスター発表</a></li>
             </ul>
           </div>
           <div class="col-4 col-sm">
@@ -156,8 +160,8 @@ WISS2022 実行委員会<br />
           <div class="col-4 col-sm">
             <h2>予稿集</h2>
             <ul class="list-unstyled">
-              <li><a href="https://www.wiss.org/">ウェブ予稿集(準備中)</a></li>
-              <li><a href="./">電子予稿集(準備中)</a></li>
+              <li><a href="https://www.wiss.org/WISS2022Proceedings/">ウェブ予稿集</a></li>
+              <li><a href="./downloads/proceedings.pdf">電子予稿集</a></li>
             </ul>
           </div>
           <div class="col-4 col-sm">
