--- a/design-competition.html
+++ b/design-competition.html
@@ -30,7 +30,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-program">プログラム</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-program"><a class="dropdown-item" href="./program.html">全体スケジュール・登壇発表・ロングティザー発表</a><a class="dropdown-item" href="./demo-poster.html">デモ・ポスター発表(準備中)</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-program"><a class="dropdown-item" href="./program.html">全体スケジュール・登壇発表・ロングティザー発表</a><a class="dropdown-item" href="./demo-poster.html">デモ・ポスター発表</a>
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-live-streaming">動画中継</a>
@@ -38,7 +38,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-proceedings">予稿集</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-proceedings"><a class="dropdown-item" href="https://www.wiss.org/">ウェブ予稿集(準備中)</a><a class="dropdown-item" href="./">電子予稿集(準備中)</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-proceedings"><a class="dropdown-item" href="https://www.wiss.org/WISS2022Proceedings/">ウェブ予稿集</a><a class="dropdown-item" href="./downloads/proceedings.pdf">電子予稿集</a>
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-about-wiss">WISSについて</a>
@@ -133,7 +133,7 @@
             <h2>プログラム</h2>
             <ul class="list-unstyled">
               <li><a href="./program.html">全体スケジュール・登壇発表・ロングティザー発表</a></li>
-              <li><a href="./demo-poster.html">デモ・ポスター発表(準備中)</a></li>
+              <li><a href="./demo-poster.html">デモ・ポスター発表</a></li>
             </ul>
           </div>
           <div class="col-4 col-sm">
@@ -147,8 +147,8 @@
           <div class="col-4 col-sm">
             <h2>予稿集</h2>
             <ul class="list-unstyled">
-              <li><a href="https://www.wiss.org/">ウェブ予稿集(準備中)</a></li>
-              <li><a href="./">電子予稿集(準備中)</a></li>
+              <li><a href="https://www.wiss.org/WISS2022Proceedings/">ウェブ予稿集</a></li>
+              <li><a href="./downloads/proceedings.pdf">電子予稿集</a></li>
             </ul>
           </div>
           <div class="col-4 col-sm">
