update demo page

--- a/demo-poster.html
+++ b/demo-poster.html
@@ -74,9 +74,6 @@
         <h5>[1-A04] WordCloudを用いたPC利用時の発話可視化手法の提案  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">友広純々野(はこだて未来大), 塚田浩(はこだて未来大)</p>
-        <h5>[1-A05] AR空間内における視線およびコントローラを用いたオブジェクト操作手法  </h5>
-        <h6>&lt;ロングティザー&gt;</h6>
-        <p class="authors">石橋遼(筑波大)，田之頭吾音(筑波大)，井原圭一(筑波大)，川口一画(筑波大)</p>
         <h5>[1-A06] 遠隔地の複数出来事を同時に体験するための視聴代行botとタイムライン型インタフェースの提案  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">村上雄哉(明治大), 渡邊恵太(明治大)</p>
@@ -89,9 +86,9 @@
         <h5>[1-B01] Helpfeel  </h5>
         <h6></h6>
         <p class="authors"></p>
-        <h5>[1-B02] いつでもどこでもピアノ練習が可能なグローブ型デバイスを用いた練習方法の提案  </h5>
-        <h6>&lt;ロングティザー&gt;</h6>
-        <p class="authors">野崎陽奈子(筑波大)，志築文太郎(筑波大)</p>
+        <h5>[1-B02] サーモクロミック色漆を用いたインタラクティブに模様が変化するおぼん型アプリケーションの試作  </h5>
+        <h6>&lt;予稿なしデモポスター&gt;</h6>
+        <p class="authors">西川宜利(筑波大)，野崎陽奈子(筑波大)，井口凌輔(筑波大)，新由衣(筑波大)，橋本悠希(筑波大)，志築文太郎(筑波大)</p>
         <h5>[1-B03] ReciPic: A Tool for Generating Infographic from Recipe Procedure Text  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">Lechang Zhang(お茶の水女子大), Itoh Takayuki(お茶の水女子大)</p>
@@ -178,6 +175,9 @@
         <h5>[2-A03] WristRayFlick：手首からのレイによるVR向けの片手かな文字入力手法  </h5>
         <h6>&lt;ロングティザー&gt;</h6>
         <p class="authors">井口凌輔(筑波大)，横山海青(筑波大)，礒本俊弥(筑波大)，志築文太郎(筑波大)</p>
+        <h5>[2-A04] AR空間内における視線およびコントローラを用いたオブジェクト操作手法  </h5>
+        <h6>&lt;ロングティザー&gt;</h6>
+        <p class="authors">石橋遼(筑波大)，田之頭吾音(筑波大)，井原圭一(筑波大)，川口一画(筑波大)</p>
         <h5>[2-A05] HMD前面を用いたVR用フリック文字入力手法の提案  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">山口泰生(筑波大), 西川宜利(筑波大), 志築文太郎(筑波大)</p>
@@ -202,6 +202,9 @@
         <h5>[2-B05] 研究概要に基づいて質問を生成するAIシステム  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">大友千宙(明治大), 宮下芳明(明治大)</p>
+        <h5>[2-B06] 音韻と韻律を含めたオノマトペ音声からの Transformer による爆発音合成  </h5>
+        <h6>&lt;デモポスター&gt;</h6>
+        <p class="authors">滝沢力(京産大), 平井重行(京産大)</p>
         <h5>[2-B07] 日本語での認知シャッフル睡眠法を用いた入眠支援システムの提案  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">三瓶智輝(明治大), 宮下芳明(明治大)</p>
@@ -333,18 +336,15 @@
         <h5>[3-B13] 視覚障害者単独でのスキーシミュレータ利用のためのフィードバックシステム  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">三浦悠輔(早大), Wu Erwin(東工大), 栗林雅希(早大), 小池英樹(東工大), 森島繁生(早稲田大学理工学術院総合研究所)</p>
-        <h5>[3-B14] 音韻と韻律を含めたオノマトペ音声からの Transformer による爆発音合成  </h5>
-        <h6>&lt;デモポスター&gt;</h6>
-        <p class="authors">滝沢力(京産大), 平井重行(京産大)</p>
         <h5>[3-B16] DStyleKeyboard：キーが動的に変化するソフトウェアキーボードの開発  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">LI MIAO(筑波大), 高橋伸(筑波大)</p>
         <h5>[3-C01] 突っ張りと引っ張り関係を理解できるActive Textileのワークショップ  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">木村正子(東大, 名古屋工業大), 上條陽斗(東大), 木島凪沙(東大), 仙福孝太朗(日建設計), 舘知宏(東大)</p>
-        <h5>[3-C02] サーモクロミック色漆を用いたインタラクティブに模様が変化するおぼん型アプリケーションの試作  </h5>
-        <h6>&lt;予稿なしデモポスター&gt;</h6>
-        <p class="authors">西川宜利(筑波大)，野崎陽奈子(筑波大)，井口凌輔(筑波大)，新由衣(筑波大)，橋本悠希(筑波大)，志築文太郎(筑波大)</p>
+        <h5>[3-C02] いつでもどこでもピアノ練習が可能なグローブ型デバイスを用いた練習方法の提案  </h5>
+        <h6>&lt;ロングティザー&gt;</h6>
+        <p class="authors">野崎陽奈子(筑波大)，志築文太郎(筑波大)</p>
         <h5>[3-C04] 筋肉の肥大化を体験するマンガ物理学的MRシステム  </h5>
         <h6>&lt;予稿なしデモポスター&gt;</h6>
         <p class="authors">津吹陸(東京電機大)，松浦 昭洋(東京電機大)</p>
