update program page

--- a/program.html
+++ b/program.html
@@ -435,14 +435,14 @@
         <h4>[15] Alertable Surfaces: 人の接触と消毒を認識しウイルスの付着を警告する実環境 <span class="badge badge-short">ショート発表</span></h4>
         <p class="authors">岸野泰恵(NTT)，白井良成(NTT)，柳沢豊(NTT)，菅原光(豊橋技科大)，尾原和也(NTT)，水谷伸(NTT)</p>
         <div class="row">
-          <div class="col-md-4"><img class="img-fluid img-thumbnail representative" src="./assets/representatives/placeholder.jpg"></div>
+          <div class="col-md-4"><img class="img-fluid img-thumbnail representative" src="./assets/representatives/15.jpg"></div>
           <div class="col-md-4">
             <h5>要旨：</h5>
-            <p>準備中</p>
+            <p>ウイルスが付着している可能性の高いモノの表面に警告を表示し，消毒行為を認識可能な環境Alertable Surfacesを提案する．Alertable Surfacesはウイルスが付着した可能性の高い場所に対して警告を表示し，消毒された時には警告を消去する．これにより，利用者は，ウイルスのある可能性の高い場所を避けたり，そこを集中的に消毒したり，またウイルスのある可能性が低いことから安心感を得られるようになる．サーマルカメラを用いて接触と消毒を検知し，プロジェクタを用いて可視化するプロトタイプシステムついても述べる．</p>
           </div>
           <div class="col-md-4">
             <h5>採録時コメント：</h5>
-            <p>準備中</p>
+            <p>近赤外線カメラとサーマルカメラを用いて接触や消毒行為を検出し，プロジェクタでウィルス付着状況を提示するルームスケールのシステムを提案した論文です. 提案システムの新規性を担う部分の有用性が示せていない点などに懸念があるものの，システムの実装はされているため，WISSで議論可能な論文であると判断されました．</p>
           </div>
         </div>
         <h4>[16] 自動運転車からの視線提示による交通事故低減の可能性の検討 <span class="badge badge-long">ロング発表</span></h4>
