update demo page

--- a/demo-poster.html
+++ b/demo-poster.html
@@ -95,7 +95,7 @@
         <h5>[1-B04] Addlit: コンビニ商品から「もう一品」を提案する食生活支援システム  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">濵野栞(明治大), 越後宏紀(明治大), 五十嵐悠紀(お茶の水女子大)</p>
-        <h5>[1-B05] VR環境向けの焦点座標を用いた3次元バブルカーソルの提案  </h5>
+        <h5>[1-B05] VR環境向けの焦点座標を用いた3次元バブルカーソルの評価  </h5>
         <h6>&lt;デモポスター&gt;</h6>
         <p class="authors">平井李音(筑波大), 鈴木健介(筑波大), 山口泰生(筑波大), 志築文太郎(筑波大)</p>
         <h5>[1-B06] 骨格推定と組込マイコンを活用したLED衣装のシミュレーションシステムの構築  </h5>
