update participant page

--- a/call-for-participants.html
+++ b/call-for-participants.html
@@ -52,7 +52,8 @@
     </header>
     <div class="container nav-padding content"><h1>参加募集</h1>
 <h2>WISS2022 への参加にあたってのご注意　★例年参加されている方も必ずご確認ください★</h2>
-<p><span style="color: red; "><strong>現地参加申込を締め切りました。オンライン参加をお待ちしております。</strong></span> (2022年11月29日追記)</p>
+<p><span style="color: red; "><strong>有料オンライン参加登録締め切りました。無料オンライン参加をご利用ください。</strong></span> (2022年12月13日追記)</p>
+<p><s><strong>現地参加申込を締め切りました。オンライン参加をお待ちしております。 (2022年11月29日追記)</strong></s></p>
 <p><s><strong>Early Registrationで、１５０部屋に達しております。ホテルと交渉を行い、若干の和室の部屋を確保しました。Late Registrationの方は、和室になる可能性があります。追加分の部屋が埋まった段階で、現地参加の申し込みを締め切ります。 (2022年11月28日追記)</strong></s></p>
 <h3>WISS2022はハイブリッドな形式で開催します</h3>
 <p>WISSは2019年まで合宿形式のワークショップとして開催してきましたが、新型コロナ対策として2020年は完全オンライン、2021年はハイブリッドで実施しました。WISS2022は、可能な限りの新型コロナ感染対策をしつつ、従来の合宿形式（現地参加）に加え、オンラインでの参加でも可能とするハイブリッドな形式で行います。
