--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <div class="alert alert-primary"> 
         <p style="margin-bottom: 0px;">最近の主な更新内容：</p>
         <ul style="margin: 0px;">
+          <li>2022/12/13: 有料オンライン参加登録締め切りました。無料オンライン参加をご利用ください</li>
           <li>2022/12/08: <a href="https://www.wiss.org/WISS2022Proceedings/">ウェブ予稿集</a>及び<a href="./downloads/proceedings.pdf">電子予稿集</a>を掲載しました</li>
           <li>2022/12/08: <a href="./demo-poster.html">デモ・ポスターページ</a>を掲載しました</li>
           <li>2022/11/30: <a href="./program.html">プログラムページ</a>を掲載しました</li>
