--- a/program.html
+++ b/program.html
@@ -214,8 +214,8 @@
         <div class="jumbotron">
           <h3>セッション1: 入力手法</h3>
           <ul class="list-inline">
-            <li class="list-inline-item"><b>座長：</b>未定</li>
-            <li class="list-inline-item"><b>チャット座長：</b>未定</li>
+            <li class="list-inline-item"><b>座長：</b>鳴海 紘也</li>
+            <li class="list-inline-item"><b>チャット座長：</b>高田 崚介</li>
           </ul>
         </div>
         <h4>[01] TetraForce: スマートフォンの表裏両面に対する垂直・剪断方向の力を入力可能な磁気式インタフェース <span class="badge badge-short">ショート発表</span></h4>
@@ -261,8 +261,8 @@
         <div class="jumbotron">
           <h3>セッション2: コンテンツ作成・理解</h3>
           <ul class="list-inline">
-            <li class="list-inline-item"><b>座長：</b>未定</li>
-            <li class="list-inline-item"><b>チャット座長：</b>未定</li>
+            <li class="list-inline-item"><b>座長：</b>宮下 芳明</li>
+            <li class="list-inline-item"><b>チャット座長：</b>大西 鮎美</li>
           </ul>
         </div>
         <h4>[04] Crane：プロダクトの機能性・可折性・可製造性を考慮した折紙の計算設計プラットフォーム <span class="badge badge-short">ショート発表</span></h4>
@@ -308,8 +308,8 @@
         <div class="jumbotron">
           <h3>セッション3: トレーニング支援</h3>
           <ul class="list-inline">
-            <li class="list-inline-item"><b>座長：</b>未定</li>
-            <li class="list-inline-item"><b>チャット座長：</b>未定</li>
+            <li class="list-inline-item"><b>座長：</b>栗原 一貴</li>
+            <li class="list-inline-item"><b>チャット座長：</b>倉本 到</li>
           </ul>
         </div>
         <h4>[07] Gino .Aiki: 合気道の身体の使い方の習得を支援するMRソフトウェア <span class="badge badge-short">ショート発表</span></h4>
@@ -368,8 +368,8 @@
         <div class="jumbotron">
           <h3>セッション4: ウェアラブル</h3>
           <ul class="list-inline">
-            <li class="list-inline-item"><b>座長：</b>未定</li>
-            <li class="list-inline-item"><b>チャット座長：</b>未定</li>
+            <li class="list-inline-item"><b>座長：</b>倉本 到</li>
+            <li class="list-inline-item"><b>チャット座長：</b>池松 香</li>
           </ul>
         </div>
         <h4>[11] メアンダコイル++：継続的なウェアラブルコンピューティングのための衣類全面での安全で高効率な無線給電 <span class="badge badge-long">ロング発表</span></h4>
@@ -402,8 +402,8 @@
         <div class="jumbotron">
           <h3>セッション5: 実世界</h3>
           <ul class="list-inline">
-            <li class="list-inline-item"><b>座長：</b>未定</li>
-            <li class="list-inline-item"><b>チャット座長：</b>未定</li>
+            <li class="list-inline-item"><b>座長：</b>岩本 拓也</li>
+            <li class="list-inline-item"><b>チャット座長：</b>加藤 邦拓</li>
           </ul>
         </div>
         <h4>[13] 車椅子使用者を周囲の人と遠隔介助者に繋ぐ遠隔車椅子システム <span class="badge badge-short">ショート発表</span></h4>
@@ -462,7 +462,8 @@
         <div class="jumbotron">
           <h3>ロングティザー</h3>
           <ul class="list-inline">
-            <li class="list-inline-item"><b>座長：</b>未定</li>
+            <li class="list-inline-item"><b>座長：</b>坂本 大介</li>
+            <li class="list-inline-item"><b>チャット座長：</b>原 貴洋</li>
           </ul>
         </div>
         <h4>[T01] リズムゲームのアルペンスキー訓練システムへの応用</h4>
