update committee page

--- a/committee.html
+++ b/committee.html
@@ -90,7 +90,7 @@
             <li><b>中野 倫靖</b> <small><a href="https://staff.aist.go.jp/t.nakano/index-j.html">[web]</a></small>
             </li>
             <li><b>所属：</b>産業技術総合研究所</li>
-            <li><b>専門：</b>
+            <li><b>専門：</b>歌声情報処理
             </li>
           </ul>
         </div>
@@ -332,7 +332,7 @@
           </h6>
           <ul class="list-unstyled">
             <li><b>所属：</b>産業技術総合研究所</li>
-            <li><b>専門：</b></li>
+            <li><b>専門：</b>歌声情報処理</li>
           </ul>
         </div>
         <div class="col-md-2 col-4"><img class="img-fluid rounded" src="./assets/committee/narumi.jpg" style="margin-bottom: 10px;">
