update award page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="./" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdown-about-wiss">WISSについて</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown-about-wiss"><a class="dropdown-item" href="./award.html">表彰(準備中)</a><a class="dropdown-item" href="./archive.html">過去のWISS</a><a class="dropdown-item" href="https://twitter.com/wiss_official">公式ツイッター</a><a class="dropdown-item" href="./committee.html">WISS委員一覧</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown-about-wiss"><a class="dropdown-item" href="./award.html">表彰</a><a class="dropdown-item" href="./archive.html">過去のWISS</a><a class="dropdown-item" href="https://twitter.com/wiss_official">公式ツイッター</a><a class="dropdown-item" href="./committee.html">WISS委員一覧</a>
                 </div>
               </li>
             </ul>
@@ -60,7 +60,9 @@
       <div class="alert alert-primary"> 
         <p style="margin-bottom: 0px;">最近の主な更新内容：</p>
         <ul style="margin: 0px;">
-          <li>2022/12/13: 有料オンライン参加登録締め切りました。無料オンライン参加をご利用ください</li>
+          <li>2022/12/16: WISS 2022は無事に終了しました．来年は<a href="https://www.wiss.org/WISS2023/">WISS 2023</a>を開催予定です</li>
+          <li>2022/12/16: <a href="./award.html">表彰ページ</a>を掲載しました</li>
+          <li>2022/12/13: 有料オンライン参加登録締め切りました．無料オンライン参加をご利用ください</li>
           <li>2022/12/08: <a href="https://www.wiss.org/WISS2022Proceedings/">ウェブ予稿集</a>及び<a href="./downloads/proceedings.pdf">電子予稿集</a>を掲載しました</li>
           <li>2022/12/08: <a href="./demo-poster.html">デモ・ポスターページ</a>を掲載しました</li>
           <li>2022/11/30: <a href="./program.html">プログラムページ</a>を掲載しました</li>
@@ -168,7 +170,7 @@ WISS2022 実行委員会<br />
           <div class="col-4 col-sm">
             <h2>WISSについて</h2>
             <ul class="list-unstyled">
-              <li><a href="./award.html">表彰(準備中)</a></li>
+              <li><a href="./award.html">表彰</a></li>
               <li><a href="./archive.html">過去のWISS</a></li>
               <li><a href="https://twitter.com/wiss_official">公式ツイッター</a></li>
               <li><a href="./committee.html">WISS委員一覧</a></li>
